<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/cardView"

    card_view:cardCornerRadius = "5dp"
    card_view:cardElevation = "5dp"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:gravity="bottom"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:orientation="horizontal">
            <com.android.volley.toolbox.NetworkImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="top"
                android:id="@+id/classListImage"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:paddingLeft="7dp"
                    android:textAllCaps="true"
                    android:id="@+id/listClassName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19dp"
                    android:textColor="@color/fitproTheme"/>
                <!--<View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/PapayaOrange"/>-->
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingLeft="7dp"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:id="@+id/date"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:textSize="15sp"
                            android:id="@+id/calender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calender"
                            android:textColor="@color/fitproTheme"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:id="@+id/listClassStartDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/stdTextColor"
                            android:textSize="14sp"
                            />
                        <TextView
                            android:layout_marginLeft="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="To"
                            android:textSize="13dp"
                            android:textColor="@color/textHint"/>
                        <TextView
                            android:id="@+id/listClassEndDate"
                            android:layout_marginLeft="3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/stdTextColor"
                            android:textSize="14dp"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_alignParentRight="true"
                        android:id="@+id/priceLayout"
                        android:layout_marginRight="5dp"
                        android:paddingTop="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView

                            android:gravity="right"
                            android:textSize="15sp"
                            android:id="@+id/priceClass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/priceIcon"

                            android:textColor="@color/fitproTheme"
                            />
                        <TextView
                            android:paddingLeft="5dp"
                            android:textColor="@color/stdTextColor"
                            android:id="@+id/listClassPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13dp"
                            />
                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_margin="2dp"
            android:background="@color/fitproTheme"/>
        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/scheduleBtn">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/fitproTheme"
                    android:id="@+id/scheduleIcon"
                    android:text="@string/ic_schedule"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:textColor="@color/fitproTheme"
                    android:text="@string/schedule"/>
            </LinearLayout>

            <LinearLayout

                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/attendanceBtn">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/fitproTheme"
                    android:id="@+id/attendanceIcon"
                    android:text="@string/ic_attendance"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:textColor="@color/fitproTheme"
                    android:text="@string/attendance"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/customerBtn">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/fitproTheme"
                    android:id="@+id/customersIcon"
                    android:text="@string/ic_customers"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:textColor="@color/fitproTheme"
                    android:text="@string/members"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>