<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/gradient"
    android:descendantFocusability="blocksDescendants"
    android:gravity="bottom"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textAllCaps="true"
            android:paddingLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customerNameList"
            android:textSize="18dp"
            android:textColor="@color/Cornflower_Blue"/>
        <!--<View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="5dp"
            android:background="@color/PapayaOrange"
            />-->
        <LinearLayout
            android:paddingTop="3dp"
            android:paddingLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cityIcon"
                android:textSize="15sp"
                android:text="@string/addressIcon"
                />
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customercityList"
                android:textSize="12dp"
                />

        </LinearLayout>
        <LinearLayout
            android:paddingLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contactIcon"
                android:textSize="15sp"
                android:text="@string/ContactIcon"
                />
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customerMobileList"
                android:textSize="12dp"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailIcon"
                android:textSize="15sp"
                android:text="@string/emailIcon"
                />
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customerEmailList"
                android:textSize="12dp"
                />

        </LinearLayout>
    </LinearLayout>
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <CheckBox
            android:id="@+id/customerCheckBox"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>-->
</LinearLayout>
