<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    card_view:cardCornerRadius = "5dp"
    card_view:cardElevation = "5dp"
    style="@style/cardView"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp"
    android:descendantFocusability="blocksDescendants"
    android:gravity="bottom"
    >
    <ImageView
        android:id="@+id/genderIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        />

    <LinearLayout
        android:layout_toRightOf="@+id/genderIcon"
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textAllCaps="true"
            android:paddingLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customerNameList"
            android:textSize="18dp"
            android:textColor="@color/fitproTheme"/>
        <!--<View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="5dp"
            android:background="@color/PapayaOrange"
            />-->
        <RelativeLayout
            android:paddingTop="3dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout

                android:paddingLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/customerLocationIcon"
                    android:textSize="15sp"
                    android:textColor="@color/fitproTheme"
                    android:text="@string/addressIcon"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/customerLocation"
                    android:textSize="13dp"
                    android:textColor="@color/stdTextColor"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contactIcon"
                    android:textSize="15sp"
                    android:textColor="@color/fitproTheme"
                    android:text="@string/ContactIcon"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/customerMobileList"
                    android:textColor="@color/stdTextColor"
                    android:textSize="13dp"
                    />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:paddingLeft="7dp"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailIcon"
                android:textSize="15sp"
                android:textColor="@color/fitproTheme"
                android:text="@string/emailIcon"
                />
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customerEmailList"
                android:textColorLink="@color/stdTextColor"
                android:textSize="13dp"
                />

        </LinearLayout>
    </LinearLayout>
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <CheckBox
            android:id="@+id/customerCheckBox"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>-->
</RelativeLayout>
</android.support.v7.widget.CardView>